syntax = "proto3";
package tendermint.planet.mars;
import "google/api/annotations.proto";
option go_package = "github.com/tendermint/planet/x/mars/types";

service Query {
  rpc MyQuery(QueryMyQueryRequest) returns (QueryMyQueryResponse) {
    option (google.api.http).get = "/tendermint/mars/withoutmsg/my_query/{mytypefield}";
  }
}

message QueryMyQueryRequest {
  string mytypefield = 1;
}

message QueryMyQueryResponse {
}